--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,27 @@
+html{
+  font-size: 18px;
+}
+
+body{
+  font-family: Helvetica;
+  width: 960px;
+  margin:0 auto;
+}
+
+header{
+  background-color: black;
+  display: flex;
+  align-items: center;
+}
+
+header img{
+  height: 1.5rem;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
+}
 h1 {
-  font-weight: bold;
-  font-size: 50px;
+  display: inline-block;
+  font-size: 1rem;
+  color: white;
+  margin: 0.66rem 0;
 }
