--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,6 +29,8 @@ header img{
 .caption{
   width: 37.5%;
   background-color: black;
+  margin-top: 17%;
+  display: inline-block;
 }
 
 .caption h1{
