Add css selectors to elements in menu section.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,14 @@ header img{
   background-size: cover;
 }
 
+#menu nav{
+
+}
+
+#menu nav span{
+  
+}
+
 .caption{
   width: 37.5%;
   background-color: black;
