--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,8 +4,8 @@ html{
 
 body{
   font-family: Helvetica;
-  width: 960px;
-  margin:0 auto;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 header{
@@ -35,6 +35,7 @@ footer span{
   height: 25rem;
   background-image: url(../images/moto.jpeg);
   background-size: cover;
+  display: flex;
 }
 
 #menu nav{
@@ -109,16 +110,22 @@ p{
 }
 
 .caption{
-  width: 37.5%;
+  width: 20rem;
   background-color: black;
-  margin-top: 17%;
-  display: inline-block;
+  margin-top: 9rem;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  height: fit-content;
+  padding: 2rem 3rem;
 }
 
 .caption h1{
   font-size: 2rem;
   font-weight: bold;
   color: white;
+  margin: 0;
+  margin-top: 0.25rem;
 }
 
 .caption h2{
@@ -132,4 +139,72 @@ h1 {
   font-size: 1rem;
   color: white;
   margin: 0.66rem 0;
+}
+
+#menu-link{
+  display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+
+  html{
+    font-size: 16px;
+  }
+
+  #glasses{
+    display: none;
+  }
+
+  #menu-link{
+    display: inline-block;
+    margin: 0.75rem auto;
+  }
+
+  .menu-item{
+    display: none;
+  }
+
+  #menu nav span {
+      padding: 0.66rem;
+      display: none;
+  }
+
+  .item{
+    width: 48%;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  .flex-container{
+    justify-content: center;
+  }
+  .caption{
+    width: 100%;
+    padding: 1rem 0 1rem 2rem;
+  }
+
+  .caption h1{
+    font-size: 1rem;
+  }
+
+  .caption h2{
+    font-size: 0.77rem;
+  }
+  #arrival{
+    height: 15rem;
+    align-items: flex-end;
+  }
+  footer{
+    justify-content: center;
+  }
+  #location, #hours {
+    margin-top: 0.5rem;
+    width: 90%;
+  }
+  #watch{
+    display: none;
+  }
+  .item{
+    width: 90%;
+  }
 }
